# Gingey

./: .gitignore  CMakeLists.txt  build_all.bat  build_engine.bat  build_game.bat
engine/include/: defines.h
engine/include/core/: ini.h  logger.h  main.h  multi_thread.h
engine/src/core/: ini.c  logger.c  main.c  motivation.txt  multi_thread.c
